fixed: underline  not showing when hovering store dropdown menu items

--- a/src/styles/_dropdown.scss
+++ b/src/styles/_dropdown.scss
@@ -41,6 +41,6 @@
 	color: var.$color_gold;
 }
 
-.dropdown-item:hover {
+#dropdown-item:hover {
 	text-decoration: underline;
 }
